# ESGseed

./: README.md  build.gradle  docker-compose.yaml  frontend-pnpm-setup.ps1  settings.gradle
.cursor/plans/: fix-gateway-dependency-79f2f66b.plan.md
AI/: docker-compose.yaml
AI/gateway/app/: main.py
AI/service/chatbotservice/: requirements.txt
ai/: docker-compose.yaml
ai/gateway/: Dockerfile  requirements.txt
ai/gateway/app/: main.py
ai/service/chatbotservice/: Dockerfile
ai/service/clawlerservice/: requirements.txt
api/: .dockerignore  docker-compose.yaml  settings.gradle
api/frontend/: package-lock.json  package.json  pnpm-lock.yaml
api/my-fastmcp/: pyproject.toml
api/my-fastmcp/gateway/: DockerFile
api/my-fastmcp/my_mcp_server/: client_context.py  client_resources.py  pyproject.toml  server_context.py  server_resources.py
front/: package.json  pnpm-lock.yaml
frontend/: package.json  pnpm-lock.yaml
my-fastmcp/: DockerFile  docker-compose.yaml  openai_api_test.py
my-fastmcp/Esg_fastmcp_dev/: 02_ 하드코딩 vs 벡터 db.md  03_해커톤의 방식.md
my-fastmcp/gateway/: main.py  pyproject.toml
my-fastmcp/my_mcp_server/: client.py  client_prompts.py  server.py  server_prompts.py
my-fastmcp/services/clawler_serice/: DockerFile  main.py  pyproject.toml  requirements.txt
my-fastmcp/services/clawler_serice/app/: main.py
server/config/: Dockerfile
server/discovery/: Dockerfile  README.md  build.gradle
server/eureka/: Dockerfile
service/common/: Dockerfile
service/esg/: Dockerfile  build.gradle
service/soccer/: Dockerfile
service/user/: Dockerfile
(+153 files in other folders)
