[project]
name = "clawler-serice"
version = "0.1.0"
description = "Crawler service for web scraping and data extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # FastAPI 웹 프레임워크
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # API 크롤링용 HTTP 클라이언트
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "aiohttp>=3.10.1",
    
    # 정적 크롤링용 HTML/XML 파서
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "scrapy>=2.11.0",
    
    # 동적 크롤링용 브라우저 자동화
    "selenium>=4.25.0",
    "playwright>=1.40.0",
]
